# maze-rl-baselines

./: .gitignore  .mcp.json  ADVERSARIAL_REVIEW_R7.md  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  LINKEDIN_POST.md  MODERN_BASELINE_TABLE_TEMPLATE.md  OUTREACH_EMAILS.md  PAPER_OUTLINE.md  PAPER_PREVIEW.md  PAPER_SHORT.md  PHASE4_REVIEWER_ATTACKS.md  PHASE5_HARDENING_PLAN.md  PHASE6_COMPUTE_PLAN.md  README.md  SESSION_REPORT.md  SESSION_REPORT_tables.md  analyze_bayesian.py  analyze_failure_cases.py  analyze_minigrid.py  analyze_scaling_law.py  build_seed_paper.js  cover_time_analysis.py  dispatch2.sh  experiment_lib.py  experiment_lib_v2.py  final_analysis.py  finalize.py  generate_comprehensive_table.py  generate_figures.py  generate_pdf.py  h200_autocommit.sh  h200_setup.sh  launch_bc_warmstart.py  launch_budget_matched_sb3.py  (+48 more)
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  learning_rule.md
analysis_output/bayesian/: bayesian_analysis.json
analysis_output/clean_504/: pairwise_vs_Random.csv  summary.csv  summary.tex
analysis_output/clean_504_v2/: pairwise_vs_Random.csv  summary.csv  summary.tex
analysis_output/comprehensive/: comprehensive_table_9x9.json
analysis_output/cover_time/: cover_time_9x9.csv
analysis_output/final/: headline.json  table1_summary.csv  table1_summary.tex  table2_vs_random.csv
analysis_output/phase4_attacks/: attack_matrix.csv
analysis_output/preliminary_504/: summary.csv  summary.tex
analysis_output/preliminary_fixed/: pairwise_vs_Random.csv  summary.csv  summary.tex
analysis_output/reward_decomposition/: decomposition_9x9.csv
analysis_output/scaling_law/: power_law_fits.json
analysis_output/tier4_oracle_random/: pairwise_vs_Random.csv  summary.csv  summary.tex
analysis_output/unified_1100/: pairwise_vs_Random.csv  summary.csv  summary.tex
attic/exp_reward_ablation_orphan/: checkpoint.json  full_DoubleDQN_9_123.json  full_DoubleDQN_9_42.json  full_DoubleDQN_9_456.json  full_FeatureQ_9_123.json  full_FeatureQ_9_42.json  full_FeatureQ_9_456.json  full_FeatureQ_9_789.json  full_MLP_DQN_9_123.json  full_MLP_DQN_9_42.json  full_MLP_DQN_9_456.json  full_MLP_DQN_9_789.json  full_NoBackRand_9_123.json  full_NoBackRand_9_42.json  full_NoBackRand_9_456.json  full_NoBackRand_9_789.json  full_Random_9_123.json  full_Random_9_42.json  full_Random_9_456.json  full_Random_9_789.json
benchmarks/: benchmark.py  proof.py
crates/engram-core/: Cargo.toml
crates/engram-core/src/: checkpoint.rs  learning_rule.rs  lib.rs  module_trait.rs  neuron.rs  spike.rs  stdp.rs  synapse.rs  types.rs
crates/engram-modules/: Cargo.toml
crates/engram-modules/src/: action_selector.rs  associative_memory.rs  episodic_memory.rs  lib.rs  predictive_error.rs  safety_kernel.rs  sensory_encoder.rs
crates/engram-python/: Cargo.toml
crates/engram-python/src/: lib.rs
crates/engram-runtime/: Cargo.toml
crates/engram-runtime/src/: config.rs  lib.rs  metrics.rs  runtime.rs
crates/engram-server/: Cargo.toml
crates/engram-server/src/: lib.rs  main.rs  protocol.rs  state_broadcaster.rs  ws_handler.rs
crates/engram-wasm/: Cargo.toml
crates/engram-wasm/src/: lib.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  CinematicDemo.tsx  main.tsx
docs/plans/: 2026-04-13-approach-c-experiments.md
examples/: compare_vs_random.py  grid_world.py  solve_maze.py  train_anomaly_detection.py  train_grid_world.py  train_maze.py  train_pattern_recognition.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
insurance_backup/exp_h200/: DoubleDQN_11_1024.json  DoubleDQN_11_10240.json  DoubleDQN_11_11264.json  DoubleDQN_11_12288.json  DoubleDQN_11_123.json  DoubleDQN_11_13312.json  DoubleDQN_11_14336.json  DoubleDQN_11_15360.json  DoubleDQN_11_16384.json  DoubleDQN_11_2048.json  DoubleDQN_11_3072.json  DoubleDQN_11_4096.json  DoubleDQN_11_42.json  DoubleDQN_11_456.json  DoubleDQN_11_5120.json  DoubleDQN_11_6144.json  DoubleDQN_11_7168.json  DoubleDQN_11_789.json  DoubleDQN_11_8192.json  DoubleDQN_11_9216.json  DoubleDQN_13_1024.json  DoubleDQN_13_10240.json  DoubleDQN_13_11264.json  DoubleDQN_13_12288.json  DoubleDQN_13_123.json  DoubleDQN_13_13312.json  DoubleDQN_13_14336.json  DoubleDQN_13_15360.json  DoubleDQN_13_16384.json  DoubleDQN_13_2048.json  DoubleDQN_13_3072.json  DoubleDQN_13_4096.json  DoubleDQN_13_42.json  DoubleDQN_13_456.json  (+470 more)
wasm-demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4310 files in other folders)
