[workspace]
members = [
    "crates/engram-core",
    "crates/engram-modules",
    "crates/engram-runtime",
    "crates/engram-server",
    "crates/engram-python",
    "crates/engram-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/engram-ai/engram"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"

# Async (server only)
tokio = { version = "1", features = ["full"] }

# Math
ndarray = "0.16"
rand = "0.9"
rand_chacha = "0.9"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Python
pyo3 = { version = "0.23", features = ["extension-module"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
