[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "engram"
version = "0.1.0"
description = "Brain-inspired adaptive intelligence runtime"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
engram = "engram.cli:main"

[tool.maturin]
python-source = "python"
manifest-path = "crates/engram-python/Cargo.toml"
module-name = "engram._engram_native"
