[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core spiking neuron engine for the Engram cognitive runtime"

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
