[package]
name = "engram-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for the Engram cognitive runtime"

[lib]
name = "_engram_native"
crate-type = ["cdylib"]

[dependencies]
engram-core = { path = "../engram-core" }
engram-runtime = { path = "../engram-runtime" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
