[package]
name = "engram-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cognitive loop orchestrator for the Engram runtime"

[dependencies]
engram-core = { path = "../engram-core" }
engram-modules = { path = "../engram-modules" }
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
