[package]
name = "engram-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket server for the Engram dashboard"

[dependencies]
engram-core = { path = "../engram-core" }
engram-runtime = { path = "../engram-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = "0.3"
